# financial-disclosure-scraper

./: README.md  pyproject.toml
src/: clustering_one_row.ipynb  example.py  main.py
src/mod/: download.py  helpers.py  scraper.py
src/scraper/: helpers.py
