[tool.poetry]
name = "financial-disclosure-scraper"
version = "0.1.0"
description = ""
authors = ["Jamie O'Reilly-Gall <jamie@advancinganalytics.co.uk>"]
readme = "README.md"
packages = [{include = "financial_disclosure_scraper"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = "^1.4.4"
scipy = "^1.9.1"
sklearn = "^0.0"
requests = "^2.28.1"
pdf2image = "^1.16.0"
bs4 = "^0.0.1"
np = "^1.0.2"
lxml = "^4.9.1"
opencv-python = "^4.6.0"
pytesseract = "^0.3.10"
tabulate = "^0.8.10"
imutils = "^0.5.4"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
ipykernel = "^6.15.3"
jupyterlab = "^3.4.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
